# variants

./: Cargo.toml
core/: Cargo.toml
core/src/: context.rs  expand.rs  expanders.rs  generator.rs  lib.rs  utilities.rs  visitors.rs
core/src/context/: enum.rs  field.rs  field_value.rs  impl.rs  item.rs  stmt.rs  struct.rs
core/src/expanders/: block.rs  enum.rs  expr_structs.rs  field.rs  field_value.rs  impl.rs  item.rs  macros.rs  stmt.rs  struct.rs  vary_type.rs
core/src/expanders/macros/: base.rs  insert_str.rs  insert_type.rs  replace_base.rs  ty.rs  type_str.rs  variant_str.rs  variant_type.rs
core/src/utilities/: attribute_remover.rs  errors_ext.rs  fields_ext.rs  ident_ext.rs  path_ext.rs  type_ext.rs  vec_ext.rs
core/src/visitors/: macros.rs  path.rs
core/src/visitors/items/: item.rs  structure.rs
core/src/visitors/macros/: insert_str.rs  insert_type.rs  type_str.rs  variant_str.rs
core/src/visitors/path/: ident_appender.rs
derive/: Cargo.toml
derive/src/: lib.rs
src/: lib.rs
tests/: derive.rs
variants-rs-core/: Cargo.toml
variants-rs-core/src/: lib.rs  parsers.rs  utilities.rs  visitors.rs
variants-rs-core/src/parsers/: attributes.rs  conversions.rs  generics.rs  helpers.rs
variants-rs-core/src/parsers/attributes/: item.rs  structure.rs
variants-rs-core/src/visitors/: implement.rs  item.rs  items.rs  macros.rs  path.rs
variants-rs-core/src/visitors/items/: implement.rs  implementation.rs  item.rs  structure.rs
variants-rs-core/src/visitors/macros/: replace_str.rs  type_str.rs  variant_str.rs  (+1 more)
variants-rs-macro/: Cargo.toml
(+4 files in other folders)
