[package]
name = "variants-core"
version = "0.1.0"
edition = "2024"

[dependencies]
squattr = { path = "../../squattr" }
prettyplease = "0.2.32"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = [
    "derive",
    "extra-traits",
    "fold",
    "full",
    "visit-mut",
] }
darling = "0.20.11"

[dev-dependencies]
colored = "3.0.0"
pretty_assertions = "1.4.1"
